# color-assistant

./: .gitignore  README.md  package.json  progress.md
.github/workflows/: ci.yml
backend/: README.md  alembic.ini  openapi.json  pyproject.toml
backend/alembic/: README  env.py  script.py.mako
backend/alembic/versions/: 20260301_0001_initial_tables.py
backend/app/: main.py
backend/app/api/v1/: auth.py  color.py  health.py
backend/app/core/: config.py  cors.py  logging.py  security.py
backend/app/db/: models.py  session.py
backend/app/schemas/: auth.py  color.py  common.py
backend/app/services/: color_analyzer.py
backend/scripts/: export_openapi.py  seed_admin.py  wait_for_db.py
backend/src/color_assistant_backend/: __init__.py
backend/tests/: conftest.py  test_auth.py  test_color.py  test_health.py
frontend/: .eslintrc.cjs  app.json  package.json
frontend/app/: _layout.tsx
frontend/app/(tabs)/: _layout.tsx  capture.tsx  index.tsx  result.tsx  settings.tsx  two.tsx
frontend/src/__tests__/: env.test.ts
frontend/src/api/: auth.ts  colorAnalyzeUpload.ts  http.ts  types.ts
frontend/src/config/: env.ts
frontend/src/features/accessibility/: app-settings-context.tsx  useFeedback.ts
frontend/src/features/color/: analysis-context.tsx
frontend/src/utils/: color.ts
infra/: docker-compose.yml
